[package]
name = "easyssh-pro-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EasySSH Pro Backend API Server - Team collaboration, audit logs, SSO"
rust-version.workspace = true

[[bin]]
name = "pro-server"
path = "src/main.rs"

[[bin]]
name = "update-admin"
path = "src/bin/update-admin.rs"
required-features = ["admin-cli"]

[dependencies]
# Core workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
base64 = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "migrate", "macros"] }
libsqlite3-sys = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# CLI
clap = { workspace = true, optional = true }

# Auth & Security
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }

# OpenAPI/Swagger
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Real-time
futures-util = { workspace = true }
futures-channel = "0.3"

# Validation
once_cell = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Configuration
dotenvy = { workspace = true }
config = { workspace = true }

# EasySSH Core
easyssh-core = { path = "../easyssh-core", features = ["pro"] }

# Error handling
anyhow = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Email
lettre = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
aes = "0.8"

# Serialization & parsing
serde_yaml = { workspace = true }
xml-rs = { workspace = true }

# Utils
time = { workspace = true }
mime = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

# SSO (optional)
openidconnect = { workspace = true, optional = true }
samael = { workspace = true, optional = true }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { workspace = true }

[features]
default = []
update-server = []
admin-cli = ["dep:clap"]
saml-sso = ["dep:samael"]
oidc-sso = ["dep:openidconnect"]
sso = ["saml-sso", "oidc-sso"]
