[package]
name = "version-checker"
version = "0.3.0"
edition = "2021"
authors = ["EasySSH Team"]
description = "EasySSH version verification tool"
license = "MIT"

[[bin]]
name = "version-checker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
