[package]
name = "api-tester-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API testing core library - HTTP/WebSocket/gRPC client"
rust-version.workspace = true

[lib]
name = "api_tester_core"
crate-type = ["rlib", "staticlib"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "cookies"] }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
multer = { workspace = true }
regex = { workspace = true }
serde_urlencoded = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true, features = ["native-tls"] }

# gRPC (optional)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:prost", "dep:tower"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
