[package]
name = "easyssh-winui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EasySSH native client for Windows with WebSocket control API"
rust-version.workspace = true

[[bin]]
name = "EasySSH"
path = "src/main.rs"

[[bin]]
name = "EasySSH-Debug"
path = "src/main_debug.rs"

[dependencies]
# Core dependency
easyssh-core = { path = "../../../easyssh-core", default-features = false }

# Workspace dependencies - async
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

# UI Framework - egui
eframe = { version = "0.28", features = ["default", "wgpu"] }
egui = "0.28"
egui-wgpu = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
wgpu = "0.20"
rfd = "0.14"
raw-window-handle = "0.6"

# WebSocket
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

# WebView for embedded terminal
wry = { version = "0.46", default-features = false, features = ["protocol", "devtools"] }
webview2-com = "0.33"

# HTTP server for API
tiny_http = "0.12"
webbrowser = "1"

# GPU acceleration
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

# AI terminal dependencies (optional)
reqwest = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

# Performance
num_cpus = "1.16"
parking_lot = { workspace = true }
lru = { workspace = true }
log = { workspace = true }

# Clipboard
arboard = { version = "3.4", features = ["wayland-data-control"] }

# Security
zeroize = { workspace = true }

# File open
open = "5.0"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Foundation_Metadata", "Win32_System_Registry",
    "Win32_Foundation", "Win32_Graphics_Direct2D", "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D", "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging",
    "UI_Notifications", "Data_Xml_Dom"
] }

[features]
default = ["standard"]

# ===== Version Features =====
lite = [
    "easyssh-core/lite",
    "sftp",
    "key-manager",
    "session-manager",
    "port-forwarding"
]

standard = [
    "easyssh-core/standard",
    "lite",
    "ai-terminal",
    "remote-desktop",
    "workflow",
    "code-editor",
    "monitoring",
    "team",
    "file-preview",
    "proxy-jump",
    "connection-pool-manager",
    "transfer-queue",
]

pro = [
    "easyssh-core/pro",
    "standard",
    "enterprise",
    "backup",
    "sync",
    "cloud-sync",
    "kubernetes",
    "advanced-snippet-sharing",
    "rbac"
]

# ===== Functional Features =====
enterprise = [
    "easyssh-core/team",
    "easyssh-core/audit",
    "easyssh-core/sso",
    "easyssh-core/sync",
    "advanced-permissions"
]

ai-terminal = ["dep:reqwest", "dep:async-trait", "dep:regex"]
remote-desktop = ["easyssh-core/remote-desktop"]
workflow = ["easyssh-core/workflow"]
code-editor = []
monitoring = ["easyssh-core/monitoring"]
database-client = ["easyssh-core/database-client"]
file-preview = []
sync = ["easyssh-core/sync"]
backup = ["easyssh-core/backup"]
search-enhanced = []
audit = ["easyssh-core/audit"]
sso = ["easyssh-core/sso"]
saml-sso = ["easyssh-core/saml-sso"]
macro-recorder = ["easyssh-core/workflow"]
sftp = ["easyssh-core/sftp"]
team = []
docker = ["easyssh-core/docker"]
kubernetes = ["easyssh-core/kubernetes"]
port-forwarding = ["easyssh-core/port-forwarding"]
transfer-queue = []
session-manager = []
connection-pool-manager = []
proxy-jump = []
key-manager = []
cloud-sync = ["sync"]
rbac = ["team"]
advanced-permissions = []
advanced-snippet-sharing = ["team"]

# Debug feature
dev-tools = ["easyssh-core/dev-tools"]

[dev-dependencies]
mockall = "0.12"
tempfile = { workspace = true }
serial_test = "3"
